force-app/main/default/objects/SPO_Colors__c/SPO_Colors__c.object-meta.xml
<CustomObject>
    <label>Color</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>