force-app/main/default/objects/SPO_Colors__c/fields/SPO_CodeCouleur__c.field-meta.xml
<CustomField>
    <fullName>SPO_CodeCouleur__c</fullName>
    <label>Code couleur</label>
    <length>10</length>
    <type>Text</type>
</CustomField>