force-app/main/default/objects/SPO_Colors__c/fields/SPO_Description__c.field-meta.xml
<CustomField>
    <fullName>SPO_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>