force-app/main/default/objects/SPO_Colors__c/fields/SPO_Position__c.field-meta.xml
<CustomField>
    <fullName>SPO_Position__c</fullName>
    <label>Position</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>