force-app/main/default/objects/SPO_Colors__c/fields/SPO_Preview__c.field-meta.xml
<CustomField>
    <fullName>SPO_Preview__c</fullName>
    <formula>IMAGE(&quot;/resource/SPO_&quot;&amp;SPO_StaticResourceName__c, &quot;--&quot;, 60, 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview</label>
    <type>Text</type>
</CustomField>