force-app/main/default/objects/SPO_Colors__c/fields/SPO_StaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>SPO_StaticResourceName__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Name , &quot;&apos;&quot;, &quot; &quot;), &quot; &quot;, &quot;_&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Static Resource Name</label>
    <type>Text</type>
</CustomField>