force-app/main/default/objects/SPO_Colors__c/listViews/All_colors.listView-meta.xml
<ListView>
    <fullName>All_colors</fullName>
    <columns>NAME</columns>
    <columns>SPO_Description__c</columns>
    <columns>SPO_StaticResourceName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All colors</label>
</ListView>